@@ -128,8 +128,8 @@ inclusive."
 RED, GREEN, and BLUE should each be numbers between 0.0 and 1.0,
 inclusive.
 
-Return a list (HUE, SATURATION, LUMINENCE), where HUE is in radians
-and both SATURATION and LUMINENCE are between 0.0 and 1.0,
+Return a list (HUE, SATURATION, LUMINANCE), where HUE is in radians
+and both SATURATION and LUMINANCE are between 0.0 and 1.0,
 inclusive."
   (let* ((r red)
          (g green)
