@@ -1354,9 +1354,9 @@ if it is a string, only list groups matching REGEXP."
 		     (predicate t)	; We list all groups?
 		     (t
 		      (or
-		       (if (eq unread t) ; Unactivated?
+		       (if (eq unread t) ; Deactivated?
 			   gnus-group-list-inactive-groups
-					; We list unactivated
+					; We list inactive
 			 (and (numberp unread) (> unread 0)))
 					; We list groups with unread articles
 		       (and gnus-list-groups-with-ticked-articles
