@@ -1,3 +1,8 @@
+2011-11-25  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* gnus.texi (The swish++ Engine, The swish-e Engine):
+	* message.texi (IDNA): Spelling fix.
+
 2011-11-24  Glenn Morris  <rgm@gnu.org>
 
 	* gnus.texi: Fix case of "GnuTLS".
